--- a/src/App.scss
+++ b/src/App.scss
@@ -1,10 +1,17 @@
+@import url('https://fonts.googleapis.com/css?family=Fira+Sans&display=swap');
+
 .hero {
   background-color: #99ffcc;
   font-family: 'Heebo', sans-serif;
 }
 
-.alt-header {
-  align-items: center;
+.intro {
+  margin-bottom: 4rem;
+}
+
+.logo {
+  font-size: 3.75rem;
+  font-family: 'Fira Sans', sans-serif;
 }
 
 .icon-spacing {
@@ -13,6 +20,10 @@
 
 .heart-spacing {
   margin-right: 3px;
+}
+
+.profile-img {
+  box-shadow: 0px 0px 10px gray;
 }
 
 a {
