--- a/src/App.scss
+++ b/src/App.scss
@@ -14,6 +14,10 @@
   font-family: 'Fira Sans', sans-serif;
 }
 
+.card-spacing {
+  padding: 1.5rem;
+}
+
 .icon-spacing {
   padding-right: 4px;
 }
