--- a/src/App.scss
+++ b/src/App.scss
@@ -57,8 +57,40 @@ a {
   margin: 0;
 }
 
+.card-display {
+  display: none;
+}
+
 @media (min-width: 426px) and (max-width: 1023px) {
   .profile-img {
     width: 50%;
+  }
+}
+
+@media (min-width: 426px) {
+  .card-display {
+    display: block;
+    width: 50%;
+  }
+
+  .project-text {
+    width: 40%;
+    padding: 0 5%;
+  }
+
+  .project {
+    margin-bottom: 10%;
+  }
+
+  .logo-margin {
+    margin: 5% 5% 0px 0px;
+  }
+
+  .logo-section {
+    margin-top: 5%;
+  }
+
+  .portfolio-container {
+    max-width: 80vw;
   }
 }
